# peglib_debug

./: .gitignore  CMakeLists.txt
include/: peglib.h  represent.h  testlang.h
source/: represent.cpp  testlang.cpp
test/: CMakeLists.txt
test/test_init/: CMakeLists.txt  transfer.cpp
